--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1 id="heading">Rock-Paper-Scissors</h1>
     <div class="choices">
         <div class="choice" id="rock">
-            <img src="images\Rock.png"/>
+            <img src="Rock.png"/>
         </div>
         <div class="choice" id="paper">
-            <img src="images\Paper.png"/>
+            <img src="Paper.png"/>
         </div>
         <div class="choice" id="scissors">
-            <img src="images\scissors.png"/>
+            <img src="scissors.png"/>
         </div>
     </div>
     <div class="scoreBoard">
